added file name generator
